<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    app:cardUseCompatPadding="true"
    app:cardElevation="3dp"
    android:layout_marginTop="@dimen/margin_8">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_8"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/pull_title"/>
            <TextView
                android:id="@+id/prTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginLeft="@dimen/margin_8"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/pull_number"/>
            <TextView
                android:id="@+id/prNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginLeft="@dimen/margin_8"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/pull_status"/>

            <ImageView
                android:id="@+id/ivState"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:padding="4dp"
                android:layout_marginLeft="@dimen/margin_8"
                android:src="@drawable/circle"/>
            <TextView
                android:id="@+id/prStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_8"
                android:textSize="15sp"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/created"/>
            <TextView
                android:id="@+id/prCreated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginLeft="@dimen/margin_8"
                android:text=""/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>